--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "An all-in-one, plugin-based, Telegram Bot.",
   "dependencies": {
+    "babel-eslint": "^8.0.1",
     "blather": "^2.0.0",
+    "flow-bin": "^0.57.3",
+    "flow-remove-types": "^1.2.3",
     "google-images": "^1.0.0",
     "inquirer": "^1.2.2",
     "limiter": "^1.1.2",
